[gd_scene load_steps=14 format=3 uid="uid://d0kmxo1xwctr3"]

[ext_resource type="Script" path="res://Scenes and Scripts/Menus/Character Selection/character_selection.gd" id="1_5srde"]
[ext_resource type="Texture2D" uid="uid://dse3wruy3xdu4" path="res://Assets/Art/UI/Menus/Character Selection/character_selection_background.png" id="2_y8g0q"]
[ext_resource type="FontFile" uid="uid://dchkjqker6h15" path="res://Assets/Font/Margarine-Regular.ttf" id="3_ixneb"]
[ext_resource type="Texture2D" uid="uid://qo6lddnymkei" path="res://Assets/Art/UI/Dialogue/dialog_box_name.png" id="3_xp1ql"]
[ext_resource type="Texture2D" uid="uid://dctjtl5x7uibn" path="res://Assets/Art/Characters/Cari/Full Body/cari.png" id="5_68byl"]
[ext_resource type="Texture2D" uid="uid://2eb67dwcvcb7" path="res://Assets/Art/Characters/Cari/Full Body/cari_highlight.png" id="6_ea15h"]
[ext_resource type="Texture2D" uid="uid://qsq6gkqrq80r" path="res://Assets/Art/Characters/Carl/Full Body/carl.png" id="7_a7vx7"]
[ext_resource type="Texture2D" uid="uid://bq2gjvd80s875" path="res://Assets/Art/Characters/Carl/Full Body/carl_higlight.png" id="8_s136i"]
[ext_resource type="AudioStream" uid="uid://c8hfjs6trma73" path="res://Assets/Sound/SFX/UI/Click/sfx_hub_ui_click_var1.mp3" id="9_5o4jd"]
[ext_resource type="AudioStream" uid="uid://2rj1ayk1kdtp" path="res://Assets/Sound/SFX/UI/Click/sfx_hub_ui_click_var2.mp3" id="10_jit2i"]
[ext_resource type="AudioStream" uid="uid://bag4e5o0pn42r" path="res://Assets/Sound/SFX/UI/Click/sfx_hub_ui_click_var3.mp3" id="11_kbe6w"]
[ext_resource type="Texture2D" uid="uid://cy40uuqqkl6ac" path="res://Assets/Art/UI/Menus/Character Selection/character_selection_background_bed_cut.png" id="12_vttij"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_bloo3"]
playback_mode = 1
streams_count = 3
stream_0/stream = ExtResource("9_5o4jd")
stream_0/weight = 1.0
stream_1/stream = ExtResource("10_jit2i")
stream_1/weight = 1.0
stream_2/stream = ExtResource("11_kbe6w")
stream_2/weight = 1.0

[node name="Character Choice" type="Node2D"]
script = ExtResource("1_5srde")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_y8g0q")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(968, 121.2)
scale = Vector2(3.7, 3.63)
texture = ExtResource("3_xp1ql")

[node name="Label" type="Label" parent="."]
visible = false
offset_top = 53.2
offset_right = 1920.0
offset_bottom = 189.2
theme_override_colors/font_color = Color(0.819608, 0.415686, 0.262745, 1)
theme_override_colors/font_outline_color = Color(0.227451, 0.223529, 0.290196, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_ixneb")
theme_override_font_sizes/font_size = 100
text = "Charakterauswahl"
horizontal_alignment = 1

[node name="Cari Button" type="TextureButton" parent="."]
offset_left = 600.0
offset_top = 128.0
offset_right = 915.0
offset_bottom = 766.0
texture_normal = ExtResource("5_68byl")
texture_hover = ExtResource("6_ea15h")

[node name="Carl Button" type="TextureButton" parent="."]
offset_left = 1328.0
offset_top = 128.0
offset_right = 1662.0
offset_bottom = 773.0
texture_normal = ExtResource("7_a7vx7")
texture_hover = ExtResource("8_s136i")

[node name="UI" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_bloo3")
volume_db = -18.0

[node name="VO" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_bloo3")
volume_db = -18.0

[node name="CharacterSelectionBackgroundBedCut" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("12_vttij")

[connection signal="button_down" from="Cari Button" to="." method="_on_cari_button_button_down"]
[connection signal="button_up" from="Cari Button" to="." method="_on_cari_button_button_up"]
[connection signal="mouse_entered" from="Cari Button" to="." method="_on_cari_button_mouse_entered"]
[connection signal="button_down" from="Carl Button" to="." method="_on_carl_button_button_down"]
[connection signal="button_up" from="Carl Button" to="." method="_on_carl_button_button_up"]
[connection signal="mouse_entered" from="Carl Button" to="." method="_on_carl_button_mouse_entered"]
